Fixed charts being too long

--- a/youtube/static/youtube/style.css
+++ b/youtube/static/youtube/style.css
@@ -36,5 +36,6 @@ div.inline-editable br {
 
 div.chart-container {
   position: relative;
-  overflow: hidden;
+  overflow: scroll;  
+  /*overflow: hidden;*/
 }
